<resources>
    <string name="app_name">Godfathers Tips</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_wait">Please wait…</string>
    <string name="loading_user_data">Loading user data…</string>
    <string name="loading_user_data_error">Error loading user data…</string>

    <string name="email_required">Email address is required</string>
    <string name="email_invalid">Email address is not valid</string>
    <string name="password_required">Password is required</string>
    <string name="password_invalid">Password should be at least 6 characters long</string>
    <string name="password_confirm_required">Confirm password</string>
    <string name="password_confirm_invalid">Passwords don\'t match</string>

    <string name="email_confirm_require">Please confirm your email address to complete Sign Up process</string>

    <string name="creating_account">Creating account…</string>
    <string name="creating_account_success">Account successfully created</string>
    <string name="creating_account_failure">Error creating account</string>

    <string name="creating_user_failure">Error updating users table</string>

    <string name="creating_role_failure">Error updating roles table</string>

    <string name="signing_in">Signing In…</string>
    <string name="signing_in_failure">Sign In failed</string>


    <string name="reset_link_sending">Sending reset link to email address…</string>
    <string name="reset_link_not_sent">Could not sent reset link</string>
    <string name="reset_link_sent">Reset link sent</string>
    <string name="reset_link_sent_message">Check your email</string>

    <string name="drawer_item_users">Users</string>
    <string name="drawer_item_share">Share</string>
    <string name="drawer_item_tips">Tips</string>
    <string name="drawer_item_tips_active">Active Tips</string>
    <string name="drawer_item_tips_archive">Archived Tips</string>
    <string name="drawer_item_tips_add">Add Tip</string>
    <string name="drawer_item_chat">Chat</string>
    <string name="chat">Chat</string>


    <string name="email_label">Email:</string>
    <string name="created_at_label">Registration Date:</string>
    <string name="status_label">Status:</string>
    <string name="toggle_vip_status">Toggle VIP status</string>

    <string name="rivals">Rivals</string>
    <string name="time">Time</string>
    <string name="tip">Tip</string>
    <string name="add_tip">Add Tip</string>
    <string name="odds">Odds</string>
    <string name="tip_successfully_added">Tip successfully added</string>
    <string name="archive">Archive</string>
    <string name="message">Enter message</string>
    <string name="welcome_to_godfathers_tips">Welcome to Godfathers Tips</string>
</resources>
